--- a/images/h1.css
+++ b/images/h1.css
@@ -1,5 +1,32 @@
 section {
   display: flex;
 }
+.top-banner {
+  background-image: url(top-banner.png);
+  background-repeat: no-repeat;
+}
+body {
+  font-family: 'Poppins', sans-serif;
+  margin: 0;
+}
 h1 {
+  font-size: 50px;
+}
+.org {
+  color: orange;
+}
+.half {
+  width: 50%;
+  padding-left: 5%;
+}
+
+.half img {
+  width: 80%;
+}
+a {
+  text-decoration: none;
+  background-image: linear-gradient(orange, red);
+  padding: 10px 40px;
+  color: white;
+  font-weight: 700;
 }
