--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ h1 {
 
 section {
   display: flex;
+  margin-bottom: 150px;
 }
 .art {
   color: orange;
@@ -30,4 +31,9 @@ section {
 .top-banner {
   background-image: url(images/top-banner.png);
   background-repeat: no-repeat;
+}
+.drm {
+  background-image: url(images/dream-bg.png);
+  background-repeat: no-repeat;
+  background-position: right;
 }
