--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ h1 {
   font-size: 50px;
 }
 
-section {
+.flexible-container {
   display: flex;
   margin-bottom: 150px;
 }
@@ -36,4 +36,33 @@ section {
   background-image: url(images/dream-bg.png);
   background-repeat: no-repeat;
   background-position: right;
+}
+.exp-item {
+  width: 50%;
+  margin-left: 5%;
+  margin-right: 5%;
+  padding-left: 20px;
+  border-radius: 5%;
+  box-shadow: 10px 10px 40px grey;
+}
+h2 {
+  font-size: 40px;
+}
+.exp {
+  background-image: url(images/exp-bg.png);
+  background-repeat: no-repeat;
+  background-position: left;
+}
+#web1 {
+  border-left: 7px solid;
+  border-image: linear-gradient(salmon, cyan);
+  border-image-slice: 1;
+}
+#web2 {
+  border-left: 7px solid;
+  border-image: linear-gradient(blue, cyan);
+  border-image-slice: 1;
+}
+footer p {
+  text-align: center;
 }
