--- a/images/h1.css
+++ b/images/h1.css
@@ -1,32 +1,35 @@
+body {
+  font-family: 'Poppins', sans-serif;
+  margin: 0;
+}
 section {
   display: flex;
+  padding-bottom: 150px;
+}
+h1 {
+  font-size: 50px;
+}
+.hw {
+  width: 50%;
+  padding-left: 5%;
+}
+.hw img {
+  width: 80%;
+}
+.link {
+  text-decoration: none;
+  background-image: linear-gradient(orange, red);
+  color: white;
+  font-weight: 700;
+  padding: 10px 40px;
+  border-radius: 5%;
 }
 .top-banner {
   background-image: url(top-banner.png);
   background-repeat: no-repeat;
 }
-body {
-  font-family: 'Poppins', sans-serif;
-  margin: 0;
-}
-h1 {
-  font-size: 50px;
-}
-.org {
-  color: orange;
-}
-.half {
-  width: 50%;
-  padding-left: 5%;
-}
-
-.half img {
-  width: 80%;
-}
-a {
-  text-decoration: none;
-  background-image: linear-gradient(orange, red);
-  padding: 10px 40px;
-  color: white;
-  font-weight: 700;
+.top {
+  background-image: url(dream-bg.png);
+  background-repeat: no-repeat;
+  background-position: right;
 }
